test_scores/negative_dimers/features/O14733.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O14733.pkl.xz